create notebook for 21-th issue

--- a/notebooks/issue-12.ipynb
+++ b/notebooks/issue-12.ipynb
@@ -18,7 +18,7 @@
     "from nats_bench.api_utils import time_string\n",
     "import numpy as np\n",
     "\n",
-    "# Create the API for size search space\n",
+    "# Create the API for topology search space\n",
     "api = create(None, 'tss', fast_mode=True, verbose=False)"
    ]
   },
