Fix the legacy issue found by #36

--- a/notebooks/issue-36.ipynb
+++ b/notebooks/issue-36.ipynb
@@ -30,8 +30,8 @@
     "    counts = 0\n",
     "    for index in tqdm(range(len(xapi))):\n",
     "        for dataset in datasets:\n",
-    "            info_12 = api.get_cost_info(index, dataset, hp=\"12\")\n",
-    "            info_full = api.get_cost_info(index, dataset, hp=xapi.full_epochs_in_paper)\n",
+    "            info_12 = xapi.get_cost_info(index, dataset, hp=\"12\")\n",
+    "            info_full = xapi.get_cost_info(index, dataset, hp=xapi.full_epochs_in_paper)\n",
     "            assert close_to(info_12['flops'], info_full['flops']), f\"The {index}-th \" \\\n",
     "            f\"architecture has issues on {dataset} \" \\\n",
     "            f\"-- {info_12['flops']} vs {info_full['flops']}.\"  # check the FLOPs\n",
@@ -44,33 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 3/32768 [00:00<19:31, 27.97it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2022-01-19 23:22:51] Try to use the default NATS-Bench (size) path from fast_mode=True and path=None.\n",
-      "There are 32768 architectures in the size search space -- NATSsize(0/32768 architectures, fast_mode=True, file=None)\n",
-      "Check NATSsize(0/32768 architectures, fast_mode=True, file=None)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  4%|▍         | 1350/32768 [00:43<16:55, 30.94it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create the API for size search space\n",
     "api = create(None, 'sss', fast_mode=True, verbose=False)\n",
@@ -80,10 +56,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/15625 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2022-01-20 01:03:30] Try to use the default NATS-Bench (topology) path from fast_mode=True and path=None.\n",
+      "There are 15625 architectures in the topology search space -- NATStopology(0/15625 architectures, fast_mode=True, file=None)\n",
+      "Check NATStopology(0/15625 architectures, fast_mode=True, file=None)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15625/15625 [20:06<00:00, 12.96it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Check NATStopology(15625/15625 architectures, fast_mode=True, file=None) completed -- 62500 arch-dataset pairs.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the API for topology search space\n",
+    "api = create(None, 'tss', fast_mode=True, verbose=False)\n",
+    "print(f'There are {len(api)} architectures in the topology search space -- {api}')\n",
+    "check_flops_params(api)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# # This code block is to figure out the real reason of issue#16\n",
+    "# from xautodl.models import get_cell_based_tiny_net\n",
+    "# from xautodl.utils import count_parameters_in_MB\n",
+    "# from xautodl.utils import get_model_infos\n",
+    "\n",
+    "# api = create(None, 'tss', fast_mode=True, verbose=False)\n",
+    "# print(api)\n",
+    "\n",
+    "# index, dataset = 296, \"cifar10\"\n",
+    "# arch = \"|skip_connect~0|+|none~0|nor_conv_3x3~1|+|avg_pool_3x3~0|nor_conv_3x3~1|nor_conv_3x3~2|\"\n",
+    "# index = api.query_index_by_arch(arch)\n",
+    "\n",
+    "\n",
+    "# info_12 = api.get_cost_info(index, dataset, hp=\"12\")\n",
+    "# info_full = api.get_cost_info(index, dataset, hp=api.full_epochs_in_paper)\n",
+    "# print(info_12)\n",
+    "# print(info_full)\n",
+    "\n",
+    "# config_12 = api.get_net_config(index, dataset)\n",
+    "# print(config_12)\n",
+    "# config_full = api.get_net_config(index, dataset)\n",
+    "# print(config_full)\n",
+    "\n",
+    "# # create the network, which is the sub-class of torch.nn.Module\n",
+    "# network = get_cell_based_tiny_net(config_full)\n",
+    "\n",
+    "# flop, param = get_model_infos(network, (1, 3, 32, 32))\n",
+    "# print(f\"FLOPs={flop}, param={param}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# results = api.query_meta_info_by_index(index, hp=api.full_epochs_in_paper)\n",
+    "# print(results.all_results.keys())\n",
+    "# print(\"\")\n",
+    "# print(results.dataset_seed[dataset])\n",
+    "# print(results.get_compute_costs(dataset))\n",
+    "# print(\"\")\n",
+    "# print(results.all_results[(dataset, 777)].flop)\n",
+    "# print(results.all_results[(dataset, 888)].flop)\n",
+    "# print(results.all_results[(dataset, 999)].flop)\n",
+    "# print(results.all_results[('cifar100', 777)])"
+   ]
   }
  ],
  "metadata": {
